src/style.css
/* 1. Use a more-intuitive box-sizing model */
*, *::before, *::after {
  box-sizing: border-box;
}

/* 2. Remove default margin */
* {
  margin: 0;
}

body {
  /* 3. Add accessible line-height */
  line-height: 1.5;
  /* 4. Improve text rendering */
  -webkit-font-smoothing: antialiased;
}

/* 5. Improve media defaults */
img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}

/* 6. Inherit fonts for form controls */
input, button, textarea, select {
  font: inherit;
}

/* 7. Avoid text overflows */
p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}

/* 8. Improve line wrapping */
p {
  text-wrap: pretty;
}
h1, h2, h3, h4, h5, h6 {
  text-wrap: balance;
}

/*
  9. Create a root stacking context
*/
#root, #__next {
  isolation: isolate;
}

button {
  background-color: transparent;
  border: none;
  margin: 0;
  padding: 0;
  text-align: inherit;
  border-radius: 0;
  appearance: none;
}

:root {
  --color-white: rgb(255, 255, 255);
  --color-black: rgb(0, 0, 0);
  --color-gray: rgb(224, 224, 224);
  --color-gray-dark: rgb(180, 180, 180);
  --color-primary: rgb(10, 0, 22);  
  --color-secondary: rgb(0, 211, 165);
  --color-shadow: rgba(20, 20, 40, 0.3);

  --shadow-card: var(--color-shadow) 0px 4px 12px;

  --padding: 16px;
  --padding-half: calc(var(--padding) / 2);
  --padding-double: calc(var(--padding) * 2);

  --border-radius: 16px;

  --navbar-height: 80px;
}

body {
  font-family: sans-serif;
}

h1 {
  font-size: 2.5rem;
}

nav {
  display: grid;
  justify-content: left;
  align-items: center;
  justify-items: center;
  grid-template-rows: var(--navbar-height);
  grid-template-columns: 48px repeat(3, 96px);
  height: var(--navbar-height);
  gap: var(--padding);
  padding: 0 var(--padding-double) 0;
  background-color: var(--color-primary);
}

#logo {
  width: 48px;
  filter: invert(71%) sepia(80%) saturate(4061%) hue-rotate(126deg) brightness(102%) contrast(101%);
}

nav button {
  font-size: 1.25rem;
  color: var(--color-white);
  justify-self: stretch;
  align-self: stretch;
  text-align: center;
}

nav button:hover {
  color: var(--color-black);
  background-color: var(--color-secondary);
}

#content {
  background-color: var(--color-primary);
  color: var(--color-white);
  display: flex;
  flex-direction: column;
  min-height: calc(100vh - var(--navbar-height));
  width: 100vw;
}

.hero-container {
  width: 100vw;
  height: calc(100vh - var(--navbar-height));
  background-position: center;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: rgba(21, 0, 56, 0.9);
  background-blend-mode: multiply;
}

.hero-container h1 {
  font-size: 6rem;
  color: var(--color-white);
}

.menu-container {
  display: grid;
  justify-content: center;
  grid-template-columns: repeat(2, 480px);
  grid-template-rows: repeat(2, 480px);
  gap: var(--padding-double);
  margin: 0 auto 0;
  width: fit-content;
}

.menu-item {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  border: var(--padding) solid transparent;
}

.menu-item:hover {
  background-color: var(--color-secondary);
  color: var(--color-black);
  border: var(--padding) solid var(--color-secondary);
}

.menu-item:hover .menu-item-img {
  filter: brightness(110%);
}

.menu-item-header {
  padding: var(--padding-half);
  display: flex;
  justify-content: center;
}

.menu-item-header h2 {
  font-size: 2.5rem;
}

.menu-item-img {
  background-position: center;
  background-size: cover;
  flex-grow: 1;
}

.contact-entry {
  display: flex;
  align-items: center;
  gap: var(--padding);
}

.contact-icon {
  width: 48px;
}

.section {
  width: 1280px;
  margin: 0 auto 0;
  display: flex;
  flex-direction: column;
  gap: var(--padding-double);
  padding: var(--padding-double) var(--padding) var(--padding-double);
}

.sub-section {
  width: 800px;
  margin: 0 auto 0;
  display: flex;
  flex-direction: column;
  gap: var(--padding-double);
}

.section-header {
  background-color: var(--color-secondary);
  color: var(--color-black);
  padding: 0 var(--padding-half) 0;
  width: fit-content;
}

.contact-section {
  width: 320px;
  display: grid;
  grid-template-rows: repeat(3, 1fr);
  gap: var(--padding);
  margin: 0 auto var(--padding-double);
}

.social-section {
  width: 320px;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: var(--padding);
  margin: 0 auto 0;
}

.social-section img {
  width: 64px;
}

.social-section img,
.contact-section img {
  filter: invert(58%) sepia(89%) saturate(2061%) hue-rotate(125deg) brightness(100%) contrast(101%);
}

